<resources>
    <string name="app_name">PetsCare App</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_specialist_services"><![CDATA[Specialist & Services]]></string>
    <string name="button_pet_owner">Pet Owner</string>
    <string name="text_choose_user">Please, choose user type to continue</string>
    <string name="content_description_logo">Image with app logo</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="button_login">Log in</string>
    <string name="button_signup">Sign up!</string>
    <string name="signup_title">SignUp</string>
    <string name="fill_in_this_form">Please fill in this form to create an account!</string>
    <string name="full_name_signup">Full Name</string>
    <string name="user_nick_name_signup">User Nickname</string>
    <string name="email_signup">Email</string>
    <string name="password_signup">Password</string>
    <string name="confirm_password_signup">Confirm Password</string>
    <string name="select_type_of_user">Type of user:</string>
    <string name="sign_up_button">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>