<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:weightSum="5"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:contentDescription="@string/content_description_logo"
        android:gravity="center"
        app:srcCompat="@drawable/logo_launch_screen" />

    <com.example.petscareapp.TypeWriter
        android:id="@+id/textChooseUserType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text=""
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonPetOwner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:onClick="onClickPetOwner"
        android:text="@string/button_pet_owner"
        app:cornerRadius="100dp"/>

    <Button
        android:id="@+id/buttonSpecialist"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/button_specialist_services"
        tools:layout_editor_absoluteY="552dp"
        android:onClick="onClickSpecialist"
        app:cornerRadius="100dp"/>

</LinearLayout>